--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{background-color: brown;}
     margin-top: 5px;
     max-width: 95%;
     max-height: 95%;
+    animation: example 2s infinite;
     
 }
 #mainsection{
@@ -36,3 +37,25 @@ body{background-color: brown;}
     margin-right: 3%;
     word-break: keep-all;
  }
+@keyframes example{ 
+    0% {transform: translateY(0);}
+    50%{transform: translateY(50px) }
+    100%{transform: translateY(0)}
+}
+.container
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    padding: 10px;
+}
+.item{
+    background-color: fuchsia;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    flex: 1;
+    margin: 5px;
+}
+.item2 {  order: 3;}
